<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutStudy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/include2"
        layout="@layout/app_bar_nav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/scrollViewStudy">

        <TextView
            android:id="@+id/selectCourseView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/pixellari"
            android:paddingTop="200dp"
            android:gravity="center"
            android:text="Select a Course to Study"
            android:textColor="@color/colorAccent"
            android:textSize="48sp" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollViewStudy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="300dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titleDataBases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pixellari"
                android:gravity="bottom|center"
                android:text="Databases"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="25dp">

                <TextView
                    android:id="@+id/dbLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pixellari"
                    android:gravity="bottom|right"
                    android:text="Level"
                    android:textSize="24sp" />

                <RatingBar
                    android:id="@+id/dbRatingBar"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:paddingTop="5dp"
                    android:paddingLeft="25sp"
                    android:paddingBottom="8sp"
                    android:progressTint="@color/colorYellow" />
            </LinearLayout>

            <Button
                android:id="@+id/studyDB"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Study!"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/titleAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pixellari"
                android:layout_marginTop="50dp"
                android:gravity="bottom|center"
                android:text="Artificial Intelligence"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/aiLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pixellari"
                    android:gravity="bottom|right"
                    android:text="Level"
                    android:textSize="24sp" />

                <RatingBar
                    android:id="@+id/aiRatingBar"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:paddingTop="5dp"
                    android:paddingLeft="25sp"
                    android:paddingBottom="8sp"
                    android:progressTint="@color/colorYellow" />
            </LinearLayout>

            <Button
                android:id="@+id/studyAI"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Study!"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/titleGraphics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pixellari"
                android:layout_marginTop="50dp"
                android:gravity="bottom|center"
                android:text="Graphics"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/graphicsLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pixellari"
                    android:gravity="bottom|right"
                    android:text="Level"
                    android:textSize="24sp" />

                <RatingBar
                    android:id="@+id/graphicsRatingBar"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:paddingTop="5dp"
                    android:paddingLeft="25sp"
                    android:paddingBottom="8sp"
                    android:progressTint="@color/colorYellow" />
            </LinearLayout>

            <Button
                android:id="@+id/studyGraphics"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Study!"
                android:textSize="24sp" />
        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>