...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/scrollViewActivities">

        <TextView
            android:id="@+id/loadScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/pixellari"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonStudy"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Study"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonSleep"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
...
